@@ -1,9 +1,0 @@
-
-use strict;
-use warnings;
-
-use Test::More tests => 1;                      # last test to print
-use ok 'Search::GIN::Extract::ClassMap';
-
-
-
